# coffee-shop

./: .env.docker  .env.docker_example  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
app/api/v1/: permissions.py  serializers.py  urls.py  views.py
app/base/: fields.py  models.py
app/chat/: consumers.py  routing.py
app/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py
app/shop/: admin.py  models.py  tasks.py
app/shop/migrations/: 0001_initial.py  0002_alter_category_managers_alter_product_managers.py  0003_orderitem.py
app/users/: admin.py  models.py
app/users/migrations/: 0001_initial.py  0002_alter_user_is_verified.py  0003_alter_user_managers.py
docker/: Dockerfile
